--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open",
-    "test": "jest",
-    "watch": "jest --watchAll"
+    "test": "jest --detectOpenHandles",
+    "watch": "jest --watchAll --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,16 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
@@ -42,6 +46,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
     "phaser": "^3.50.0"
   }
 }
