--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
     "raw-loader": "^3.1.0",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.17.2",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^26.4.4",
     "webpack": "^4.41.2",
