--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
   "name": "zombie-apocalypse",
   "version": "1.1.2",
+  "jest": {
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    },
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/src/_test_/mocks/styleMock.js",
+      "\\.(gif|ttf|eot|svg|png|ogg|wav|mp3)$": "<rootDir>/src/_test_/mocks/fileMock.js"
+    }
+  },
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
@@ -38,6 +54,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
     "raw-loader": "^3.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.3.3",
